<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/obligation_blue"
    tools:context=".view.activites.LoginActivity">

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="30dp"
        android:hint="@string/enter_username"
        android:minHeight="48dp"
        android:background="@drawable/login_form_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail" />
    <TextView
        android:id="@+id/emailErrorTv"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:text="@string/email_can_t_be_empty"
        android:textColor="@color/warning_red"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/enter_email"
        android:minHeight="48dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/login_form_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/usernameErrorTv"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:text="@string/username_can_t_be_empty"
        android:textColor="@color/warning_red"
        android:visibility="invisible"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/editTextUsername"
        app:layout_constraintTop_toBottomOf="@id/editTextUsername"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:background="@drawable/login_form_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />
    <TextView
        android:id="@+id/passwordErrorTv"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:text="@string/password_can_t_be_empty"
        android:textColor="@color/warning_red"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="250sp"
        android:layout_height="45sp"
        android:background="@drawable/login_button_style"
        android:text="@string/login"
        android:textSize="22sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:layout_constraintVertical_bias="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>