<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="top|center"
    android:orientation="vertical"
    >

    <TextView
        android:background="@color/main_blue"
        android:id="@+id/edit_obligation_date_tv"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="0sp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/editobligation_lowbtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/low"
            android:layout_weight="1"
            android:background="@drawable/priority_button_low_border"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/editobligation_midbtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/mid"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:background="@drawable/priority_button_mid"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/editobligation_highbtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/high"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:background="@drawable/priority_button_high"/>

    </LinearLayout>

    <EditText
        android:id="@+id/editobligation_title_ed"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:textSize="20sp"
        android:layout_gravity="center|start"
        android:padding="20sp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginTop="15sp"
        android:background="@drawable/round_blue_border"
        android:hint="@string/title"/>

    <EditText
        android:id="@+id/editobligation_time_ed"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:drawableEnd="@drawable/clock"
        android:textSize="20sp"
        android:layout_gravity="center|start"
        android:padding="20sp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginTop="15sp"
        android:drawablePadding="15sp"
        android:background="@drawable/round_blue_border"
        android:hint="@string/time"/>

    <EditText
        android:id="@+id/editobligation_desc_ed"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:maxLines="30"
        android:lines="30"
        android:layout_margin="16dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:background="@drawable/layout_details_tv"
        android:padding="15dp"
        android:gravity="top|start"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:showDividers="middle"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/edit_obligation_save_btn"
                android:layout_width="170dp"
                android:background="@drawable/layout_edit_button"
                android:layout_height="50dp"
                android:textSize="20sp"
                android:text="@string/save"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/edit_obligation_cancel_btn"
                android:layout_width="170dp"
                android:background="@drawable/layout_delete_button"
                android:layout_height="50dp"
                android:textSize="20sp"
                android:text="@string/cancel"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>